# DecentralizedVotingSystem-concrats

./: Cargo.toml  README.md  replit_zip_error_log.txt
src/: main.rs
